fix too large font on mobile

--- a/src/public/stylesheets/mobile.css
+++ b/src/public/stylesheets/mobile.css
@@ -24,7 +24,6 @@ html, body {
 }
 
 #tree {
-    font-size: larger;
     width: 100%;
     overflow: auto;
 }
